// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders step 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 12px;
  vertical-align: middle;
  width: 12px;
  fill: #1785FB;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 12px;
}

.c0 button {
  border: 0;
  background: transparent;
  box-shadown: none;
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0 0 0 auto;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font: 500 10px/12px 'Roboto';
}

<div>
  <div
    className="c0"
  >
    <div>
      Header
    </div>
    <ul
      className="c1"
    >
      <li>
        <button
          onClick={[Function]}
        >
          <svg
            className="c2"
            size={12}
            viewBox="0 0 16 16"
          >
            <path
              d="M4.8762876,8.30988427 L4.8762876,7.69011573 L11.8762816,15.2195214 C12.0581225,15.415115 12.0370637,15.7124148 11.8292456,15.8835591 C11.6214275,16.0547035 11.3055464,16.0348835 11.1237056,15.83929 L4.12371155,8.30988427 C3.95876282,8.13246042 3.95876282,7.86753958 4.12371155,7.69011573 L11.1237056,0.160710032 C11.3055464,-0.034883519 11.6214275,-0.0547035068 11.8292456,0.116440851 C12.0370637,0.287585208 12.0581225,0.584885024 11.8762816,0.780478575 L4.8762876,8.30988427 Z"
            />
          </svg>
        </button>
      </li>
      <li>
        3
         / 
        4
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          <svg
            className="c2"
            size={12}
            viewBox="0 0 16 16"
          >
            <path
              d="M11.1237124,8.30988427 L4.1237184,0.780478575 C3.94187753,0.584885024 3.96293626,0.287585208 4.1707544,0.116440851 C4.37857254,-0.0547035068 4.69445358,-0.034883519 4.87629445,0.160710032 L11.8762885,7.69011573 C12.0412372,7.86753958 12.0412372,8.13246042 11.8762885,8.30988427 L4.87629445,15.83929 C4.69445358,16.0348835 4.37857254,16.0547035 4.1707544,15.8835591 C3.96293626,15.7124148 3.94187753,15.415115 4.1237184,15.2195214 L11.1237124,7.69011573 L11.1237124,8.30988427 Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
  Content 3
</div>
`;

exports[`render renders without crashing 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 12px;
  vertical-align: middle;
  width: 12px;
  fill: #1785FB;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 12px;
}

.c0 button {
  border: 0;
  background: transparent;
  box-shadown: none;
  margin-left: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0 0 0 auto;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font: 500 10px/12px 'Roboto';
}

<div>
  <div
    className="c0"
  >
    <div>
      Header
    </div>
    <ul
      className="c1"
    >
      <li>
        <button
          onClick={[Function]}
        >
          <svg
            className="c2"
            size={12}
            viewBox="0 0 16 16"
          >
            <path
              d="M4.8762876,8.30988427 L4.8762876,7.69011573 L11.8762816,15.2195214 C12.0581225,15.415115 12.0370637,15.7124148 11.8292456,15.8835591 C11.6214275,16.0547035 11.3055464,16.0348835 11.1237056,15.83929 L4.12371155,8.30988427 C3.95876282,8.13246042 3.95876282,7.86753958 4.12371155,7.69011573 L11.1237056,0.160710032 C11.3055464,-0.034883519 11.6214275,-0.0547035068 11.8292456,0.116440851 C12.0370637,0.287585208 12.0581225,0.584885024 11.8762816,0.780478575 L4.8762876,8.30988427 Z"
            />
          </svg>
        </button>
      </li>
      <li>
        1
         / 
        4
      </li>
      <li>
        <button
          onClick={[Function]}
        >
          <svg
            className="c2"
            size={12}
            viewBox="0 0 16 16"
          >
            <path
              d="M11.1237124,8.30988427 L4.1237184,0.780478575 C3.94187753,0.584885024 3.96293626,0.287585208 4.1707544,0.116440851 C4.37857254,-0.0547035068 4.69445358,-0.034883519 4.87629445,0.160710032 L11.8762885,7.69011573 C12.0412372,7.86753958 12.0412372,8.13246042 11.8762885,8.30988427 L4.87629445,15.83929 C4.69445358,16.0348835 4.37857254,16.0547035 4.1707544,15.8835591 C3.96293626,15.7124148 3.94187753,15.415115 4.1237184,15.2195214 L11.1237124,7.69011573 L11.1237124,8.30988427 Z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </div>
  Content 1
</div>
`;
